fix: eliminate footer layout shift and improve footer styles

--- a/src/components/FixedBackground/FixedBackground.module.scss
+++ b/src/components/FixedBackground/FixedBackground.module.scss
@@ -1,3 +1,5 @@
+@use '../../sass/common' as *;
+
 .fixedContainer {
   position: fixed;
   top: 0;
@@ -5,5 +7,5 @@
   width: 100vw;
   height: 100vh;
 	min-width: 340px;
-
+	background-color: $black;
 }
